# OpenCV

./: README.md
ColourTracingLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detector.cpp  detector.h  main  main.cpp  mathutility.h  timer.cpp  types.h
ColourTracking/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
Shape_Detection_Git/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
summer_studio/: CMakeLists.txt  package.xml
summer_studio/src/: detector.cpp  detector.h  main.cpp  mathutility.cpp  timer.h  types.h
